# gjallarbru

./: LICENSE  README.md  gjallarbru.cabal  stack.yaml
src/: Gjallarbru.hs
test/: spec.hs
