name: gjallarbru
version: 0.1.0.0
synopsis: Front end dev iteration tool that 
-- description: 
license: MIT
license-file: LICENSE
author: Bryan Richter
maintainer: b@chreekat.net
-- copyright: 
category: Web
build-type: Simple
-- extra-source-files: 
cabal-version: >=1.10

library
    exposed-modules: Gjallarbru
    -- other-modules: 
    -- other-extensions: 
    ghc-options: -Wall
    build-depends: base >=4.9
    hs-source-dirs: src
    default-language: Haskell2010

test-suite spec
    type: exitcode-stdio-1.0
    main-is: spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base
        , gjallarbru
        , tasty >= 0.11.2
        , tasty-hunit >= 0.9.2
